[package]
name = "SteamReviewTemplate"
version = "0.0.1"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = [
    "glow",
    "wayland",
    "x11",
] }


[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
